package controller;

import java.util.List;
import java.util.Scanner;

import model.Categoria;
import model.Produto;
import service.LogService;
import service.ProdutoService;

public class ProdutoController {
    private final ProdutoService service = new ProdutoService();
    private final LogService log = new LogService();
    private final String usuarioAtivo;
    private final Scanner scanner = new Scanner(System.in);

    // Construtor que recebe o usuário ativo
    public ProdutoController(String usuarioAtivo) {
        this.usuarioAtivo = usuarioAtivo;
    }

    public void menu() {
        int opcao;
        do {
            System.out.println("\n=== MENU PRODUTO ===");
            System.out.println("1 - Adicionar Produto");
            System.out.println("2 - Listar Produtos");
            System.out.println("3 - Atualizar Produto");
            System.out.println("4 - Remover Produto");
            System.out.println("5 - Exportar produtos para JSON");
            System.out.println("6 - Importar produtos de JSON");
            System.out.println("0 - Sair");
            System.out.print("Escolha: ");
            opcao = scanner.nextInt();
            scanner.nextLine();

            switch (opcao) {
                case 1 -> adicionar();
                case 2 -> listar();
                case 3 -> atualizar();
                case 4 -> remover();
                case 5 -> exportarJSON();
                case 6 -> importarJSON();
                case 0 -> System.out.println("Saindo...");
                default -> System.out.println("❌ Opção inválida!");
            }
        } while (opcao != 0);
    }

    private void adicionar() {
        System.out.print("Nome: ");
        String nome = scanner.nextLine();

        System.out.print("Preço: ");
        double preco = scanner.nextDouble();

        System.out.print("Quantidade: ");
        int qtd = scanner.nextInt();

        System.out.println("Categoria (FRUTAS, VERDURAS, LEGUMES, BEBIDAS, OUTROS): ");
        String cat = scanner.next().toUpperCase();

        try {
            Produto p = new Produto(0, nome, preco, qtd, Categoria.valueOf(cat));
            service.adicionarProduto(p);
            log.registrar(usuarioAtivo, "Adicionou produto: " + nome + " (ID gerado automaticamente)");
            System.out.println("✅ Produto adicionado com sucesso!");
        } catch (IllegalArgumentException e) {
            System.out.println("❌ Categoria inválida! Operação cancelada.");
        }
    }

    private void listar() {
        List<Produto> lista = service.listarProdutos();
        if (lista.isEmpty()) {
            System.out.println("⚠️ Nenhum produto cadastrado.");
        } else {
            System.out.println("\n=== LISTA DE PRODUTOS ===");
            lista.forEach(System.out::println);
        }
    }

    private void atualizar() {
        System.out.print("ID do produto a atualizar: ");
        int id = scanner.nextInt();
        scanner.nextLine();

        System.out.print("Novo nome: ");
        String nome = scanner.nextLine();

        System.out.print("Novo preço: ");
        double preco = scanner.nextDouble();

        System.out.print("Nova quantidade: ");
        int qtd = scanner.nextInt();

        System.out.println("Nova categoria (FRUTAS, VERDURAS, LEGUMES, BEBIDAS, OUTROS): ");
        String cat = scanner.next().toUpperCase();

        try {
            Produto novo = new Produto(id, nome, preco, qtd, Categoria.valueOf(cat));
            if (service.atualizarProduto(id, novo)) {
                log.registrar(usuarioAtivo, "Atualizou produto ID " + id);
                System.out.println("✅ Produto atualizado!");
            } else {
                System.out.println("❌ Produto não encontrado.");
            }
        } catch (IllegalArgumentException e) {
            System.out.println("❌ Categoria inválida! Operação cancelada.");
        }
    }

    private void remover() {
        System.out.print("ID do produto a remover: ");
        int id = scanner.nextInt();

        if (service.removerProduto(id)) {
            log.registrar(usuarioAtivo, "Removeu produto ID " + id);
            System.out.println("✅ Produto removido!");
        } else {
            System.out.println("❌ Produto não encontrado.");
        }
    }

    // ============================================================
    // 🧩 FUNÇÕES JSON — Exportar e Importar
    // ============================================================

    private void exportarJSON() {
        service.exportarParaJSON("produtos.json");
        log.registrar(usuarioAtivo, "Exportou produtos para JSON");
        System.out.println("✅ Produtos exportados para 'produtos.json'.");
    }

    private void importarJSON() {
        service.importarDeJSON("produtos.json");
        log.registrar(usuarioAtivo, "Importou produtos de JSON");
        System.out.println("✅ Produtos importados de 'produtos.json'.");
    }
}
